# esp-wifi-manager

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: Cargo.toml
examples-esp32/: Cargo.toml
examples-esp32/.cargo/: config.toml
examples-esp32/src/: main.rs
examples-esp32c3/: Cargo.toml  build.rs  rust-toolchain.toml
examples-esp32c3/.cargo/: config.toml
examples-esp32c3/src/: main.rs
examples-esp32c6/: Cargo.toml  rust-toolchain.toml
examples-esp32c6/.cargo/: config.toml
examples-esp32c6/src/: main.rs
examples-esp32s3/: Cargo.toml
examples-esp32s3/.cargo/: config.toml
examples-esp32s3/src/: main.rs
examples/.cargo/: config.toml
examples/src/: main.rs
src/: bluetooth.rs  http.rs  http_server.rs  lib.rs  nvs.rs  panel.html  structs.rs  utils.rs
