[package]
name = "wifimanager-example"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.18.1", features = [
    "esp32",
    "panic-handler",
    "println",
] }
esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
log = { version = "0.4.28" }
esp-radio = { version = "0.17.0", features = [
    "esp32",
    "unstable",
    "wifi",
    "coex",
    "esp-alloc",
] }

esp-rtos = { version = "0.2.0", features = [
    "esp32",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "log-04",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
embassy-executor = { version = "0.9.1", features = [] }
embassy-net = { version = "0.7.1", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "log",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
embassy-time = { version = "0.5.0" }
esp-storage = { version = "0.8.1", features = ["esp32"] }
embedded-storage = "0.3.1"
esp-wifi-manager = { path = "../", default-features = false, features = [
    "esp32",
    # "ble",
    "ap",
] }
static_cell = { version = "2.1.1" }
heapless = { version = "0.9.1", default-features = false }
 

critical-section = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
